Downgrade to Java 11